[package]
name = "lazyjson"
version = "0.1.0"
authors = ["Elias <p.elias.graf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.76" }

[dependencies.web-sys]
version = "0.3.53"
features = [
    "console",
    "EventListener",
    "InputEvent",
    "EventTarget",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Document",
    "CssStyleDeclaration",
    "HtmlTextAreaElement",
    "HtmlPreElement",
    "HtmlSpanElement",
]