[package]
name = "lazyjson-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.76" }
console_error_panic_hook = "0.1.7"
lazyjson-core = { package = "lazyjson", path = "../lazyjson" }
lazyjson-emitter-json = { path = "../emitter/json" }

[dependencies.web-sys]
version = "0.3.53"
features = [
    "console",
]