[package]
name = "wasm"
version = "0.1.0"

[dependencies]
rand= "0.8.3"

# [package]
# name = "wasm"
# version = "0.1.0"

# # [lib]
# # crate-type = ["cdylib"]

# [dependencies]
# rand = "0.8.3"
# lazyjson = { path = "../lazyjson" }
# wasm-bindgen = { version = "0.2.76" }

# [dependencies.web-sys]
# version = "0.3.53"
# features = [
#     "console",
#     "EventListener",
#     "InputEvent",
#     "EventTarget",
#     "Element",
#     "HtmlElement",
#     "Node",
#     "Window",
#     "Document",
#     "CssStyleDeclaration",
#     "HtmlTextAreaElement",
#     "HtmlPreElement",
#     "HtmlSpanElement"
# ]